WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293868
[Cleanup] minPreferredLogicalWidth/maxPreferredLogicalWidth should not be on RenderObject
https://bugs.webkit.org/show_bug.cgi?id=293868
Summary
[Cleanup] minPreferredLogicalWidth/maxPreferredLogicalWidth should not be on ...
alan
Reported
2025-05-31 19:02:24 PDT
ssia
Attachments
Patch
(5.10 KB, patch)
2025-05-31 19:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.15 KB, patch)
2025-06-02 12:48 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.15 KB, patch)
2025-06-02 13:08 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-05-31 19:34:35 PDT
Created
attachment 475438
[details]
Patch
alan
Comment 2
2025-06-02 12:48:25 PDT
Created
attachment 475458
[details]
Patch
alan
Comment 3
2025-06-02 13:08:14 PDT
Created
attachment 475459
[details]
[fast-cq]Patch
EWS
Comment 4
2025-06-02 15:01:15 PDT
Committed
295714@main
(33b72eccf4c7): <
https://commits.webkit.org/295714@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475459
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-06-02 15:05:28 PDT
<
rdar://problem/152457328
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug