[Cleanup] minPreferredLogicalWidth/maxPreferredLogicalWidth should not be on RenderObject https://bugs.webkit.org/show_bug.cgi?id=293868

Reviewed by Antti Koivisto.

RenderBox is the first class in the hierarchy that overrides min/max functions.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::performSizeToContentAutoSize):
* Source/WebCore/rendering/RenderBox.h:
* Source/WebCore/rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::computeIntrinsicLogicalWidths const):
* Source/WebCore/rendering/RenderObject.h:
(WebCore::RenderObject::clearNeedsPreferredWidthsUpdate):
(WebCore::RenderObject::minPreferredLogicalWidth const): Deleted.
(WebCore::RenderObject::maxPreferredLogicalWidth const): Deleted.

Canonical link: https://commits.webkit.org/295714@main